--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,10 @@
             <artifactId>Simple-Yaml</artifactId>
             <version>1.8.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.velocitypowered</groupId>
+            <artifactId>velocity-api</artifactId>
+            <version>3.4.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
